# vidub

./: .gitignore  AGENTS.md  README.md  __init__.py  __main__.py  audio.py  config.py  downloader.py  lang_utils.py  log_utils.py  models.py  parallel.py  pipeline.py  pyproject.toml  registry.py  setup.py  srt_utils.py  state.py
asr/: base.py  qwen.py  whisper.py  whisper_cpp.py
docs/: resumable.md
translate/: base.py  google.py  llm.py
tts/: base.py  vieneu.py
